--- a/test1/components/some.html
+++ b/test1/components/some.html
@@ -1,1 +1,14 @@
-<p>blah</p>
+<p>hi there</p>
+<br-my-component>
+  <stackable-modal stackable="$ctrl.showMyModal">
+    <br-modal br-title="My Modal">
+      <br-modal-body>
+        <p>Some modal content...</p>
+      </br-modal-body>
+      <br-modal-footer>
+        <button type="button" class="btn btn-primary">Ok</button>
+        <button type="button" class="btn btn-default stackable-cancel">Cancel</button>
+      </br-modal-footer>
+    </br-modal>
+  </stackable-modal>
+</br-my-component>
