add modal component

--- a/test1/components/some.html
+++ b/test1/components/some.html
@@ -1,11 +1,18 @@
 <p>hi there</p>
-<br-modal br-title="My Modal">
-   <br-modal-body>
-     <p>Some modal content...</p>
-   </br-modal-body>
-   <br-modal-footer>
-     <button type="button" class="btn btn-primary">Ok</button>
-     <button type="button"
-       class="btn btn-default">Cancel</button>
-   </br-modal-footer>
- </br-modal>
+<br-modal-comp>
+  <button type="button" class="btn btn-primary" ng-click="$ctrl.showMyModal=true">
+    OPen Modal
+  </button>
+  <stackable-modal stackable="$ctrl.showMyModal">
+    <br-modal br-title="My Modal">
+      <br-modal-body>
+        <p>Some modal content...</p>
+      </br-modal-body>
+      <br-modal-footer>
+        <button type="button" class="btn btn-primary">Ok</button>
+        <button type="button"
+        class="btn btn-default">Cancel</button>
+      </br-modal-footer>
+    </br-modal>
+  </stackable-modal>
+</br-modal-comp>
